container overflow scroll fix

--- a/sass/_dronekit.scss
+++ b/sass/_dronekit.scss
@@ -4,6 +4,11 @@ body {
 img {
 	width: 100%;
 }
+.highlight-java{
+	width: 100%;
+	max-width: 800px;
+	overflow: scroll;
+}
 
 pre{
 	width: 100%;
